--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,5 @@
 [ignore]
-; We fork some components by platform
+; We fork some Components by platform
 .*/*[.]android.js
 
 ; Ignore "BUCK" generated dirs
