--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"firebase": "^4.6.0",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.2"
 	},
@@ -14,6 +15,7 @@
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
 		"jest": "21.2.1",
+		"react-native-dotenv": "^0.1.0",
 		"react-test-renderer": "16.0.0-beta.5"
 	},
 	"jest": {
