--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"firebase": "^4.6.0",
 		"react": "16.0.0-beta.5",
-		"react-native": "0.49.2"
+		"react-native": "0.49.2",
+		"react-native-offline": "^3.4.1"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
