--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"firebase": "^4.6.0",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.2",
-		"react-native-offline": "^3.4.1"
+		"react-native-chart": "^1.0.8-beta",
+		"react-native-offline": "^3.4.1",
+		"react-native-pathjs-charts": "0.0.31"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
