--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"babel-preset-react-native": "4.0.0",
 		"jest": "21.2.1",
 		"react-native-dotenv": "^0.1.0",
-		"react-test-renderer": "16.0.0-beta.5"
+		"react-test-renderer": "16.0.0-beta.5",
+		"reactotron-react-native": "^1.12.3"
 	},
 	"jest": {
 		"preset": "react-native"
